Refactoring my project structure and add the database folder