@@ -3,14 +3,13 @@ package com.gatedcommunity.backend.service;
 import com.gatedcommunity.backend.entity.dto.MonthlyExpenseDTO;
 import com.gatedcommunity.backend.entity.MonthlyExpense;
 import com.gatedcommunity.backend.exception.ResourceNotFoundException;
-import com.gatedcommunity.backend.mapper.MonthlyExpenseMapper;
+import com.gatedcommunity.backend.util.mapper.MonthlyExpenseMapper;
 import com.gatedcommunity.backend.repository.CashBoxRepository;
 import com.gatedcommunity.backend.repository.MonthlyExpenseRepository;
 import com.gatedcommunity.backend.service.interfaces.MonthlyExpenseService;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class MonthlyExpenseServiceImpl implements MonthlyExpenseService {
@@ -27,28 +26,40 @@ public class MonthlyExpenseServiceImpl implements MonthlyExpenseService {
         this.cashBoxRepository = cashBoxRepository;
         this.monthlyExpenseMapper = monthlyExpenseMapper;
     }
-    //
+
+    //private
     private void setCashBoxFromDTO(MonthlyExpense expense, MonthlyExpenseDTO dto) {
-        if (dto.cashBoxId != null ) {
-            expense.setCashBox(cashBoxRepository.findById(dto.cashBoxId)
+        if (dto.getCashBoxId() != null) {
+            expense.setCashBox(cashBoxRepository.findById(dto.getCashBoxId())
                     .orElseThrow(() -> new ResourceNotFoundException(
-                            "Caja chica no encontrada con ID: " + dto.cashBoxId)));
+                            "Cashbox not found with ID: " + dto.getCashBoxId())));
         }
     }
+
+    private MonthlyExpense findMonthlyExpenseById(Long id) {
+        return expenseRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Monthly expense not found with ID: " + id));
+    }
+
+    private void updateFromDTO(MonthlyExpense expense, MonthlyExpenseDTO dto) {
+        expense.setDescription(dto.getDescription());
+        expense.setAmount(dto.getAmount());
+        expense.setDate(dto.getDate());
+        setCashBoxFromDTO(expense, dto);
+    }
+
     //Method implement
     @Override
     public List<MonthlyExpenseDTO> getAll() {
         return expenseRepository.findAll()
                 .stream()
                 .map(monthlyExpenseMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public MonthlyExpenseDTO getById(Long id) {
-        MonthlyExpense expense = expenseRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Gasto mensual no encontrado con ID: " + id));
-        return monthlyExpenseMapper.toDTO(expense);
+        return monthlyExpenseMapper.toDTO(findMonthlyExpenseById(id));
     }
 
     @Override
@@ -60,20 +71,14 @@ public class MonthlyExpenseServiceImpl implements MonthlyExpenseService {
 
     @Override
     public MonthlyExpenseDTO update(Long id, MonthlyExpenseDTO dto) {
-        MonthlyExpense existing = expenseRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Gasto mensual no encontrado con ID: " + id));
-        existing.setDescription(dto.description);
-        existing.setAmount(dto.amount);
-        existing.setDate(dto.date);
-        setCashBoxFromDTO(existing, dto);
-        return monthlyExpenseMapper.toDTO(expenseRepository.save(existing));
+        MonthlyExpense expense = findMonthlyExpenseById(id);
+        updateFromDTO(expense, dto);
+        return monthlyExpenseMapper.toDTO(expenseRepository.save(expense));
     }
 
     @Override
     public void delete(Long id) {
-        if (!expenseRepository.existsById(id)) {
-            throw new ResourceNotFoundException("Gasto mensual no encontrado con ID: " + id);
-        }
+        findMonthlyExpenseById(id);
         expenseRepository.deleteById(id);
     }
 }
